Only show current day on small screens. Fixes #108

--- a/app/scss/patterns/_button.scss
+++ b/app/scss/patterns/_button.scss
@@ -4,6 +4,7 @@
   transition: 100ms linear all;
   color: #fff;
   padding: 1em;
+  text-align: center;
 
   &:hover,
   &:active,
